--- a/Makefile.win
+++ b/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = arrowbutton.o button.o charbackground.o collider.o hero.o hitbox.o hurtbox.o knight.o main.o player.o samurai.o window.o
-LINKOBJ  = arrowbutton.o button.o charbackground.o collider.o hero.o hitbox.o hurtbox.o knight.o main.o player.o samurai.o window.o
+OBJ      = arrowbutton.o button.o charbackground.o collider.o hero.o hitbox.o hurtbox.o knight.o main.o player.o samurai.o window.o Sound.o
+LINKOBJ  = arrowbutton.o button.o charbackground.o collider.o hero.o hitbox.o hurtbox.o knight.o main.o player.o samurai.o window.o Sound.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -L"C:/Users/Mohamed/Downloads/SDL2_image-devel-2.6.2-mingw/SDL2_image-2.6.2/x86_64-w64-mingw32/lib" -L"C:/Users/Mohamed/Downloads/SDL2-devel-2.26.1-mingw/SDL2-2.26.1/x86_64-w64-mingw32/lib" -L"C:/Users/Mohamed/Downloads/SDL2_mixer-2.6.2/x86_64-w64-mingw32/lib" -static-libgcc -lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lSDL2_mixer
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++" -I"C:/Users/Mohamed/Downloads/SDL2-devel-2.26.1-mingw/SDL2-2.26.1/x86_64-w64-mingw32/include/SDL2" -I"C:/Users/Mohamed/Downloads/SDL2_image-devel-2.6.2-mingw/SDL2_image-2.6.2/x86_64-w64-mingw32/include/SDL2" -I"C:/Users/Mohamed/Downloads/SDL2_mixer-2.6.2/x86_64-w64-mingw32/include/SDL2"
@@ -59,3 +59,6 @@ samurai.o: samurai.cpp
 
 window.o: window.cpp
 	$(CPP) -c window.cpp -o window.o $(CXXFLAGS)
+
+Sound.o: Sound.cpp
+	$(CPP) -c Sound.cpp -o Sound.o $(CXXFLAGS)
